# AuditLens

./: .gitignore  README.md  pyproject.toml
Documentation/: Project Setup & Build Guide.md  README.md  Technical Project Guide.md  Unified Log Schema.md
Program Files/: AuditLens.py  Configuration.py  ImportVerification.py  Models.py  TestRules.py
Program Files/Analysis/: Explainer.py
Program Files/Correlation/: Engine.py
Program Files/Data/: application_log.txt  audit_log.csv  incident_notes.md  system_log.txt
Program Files/Detection/: Rules.py
Program Files/Ingest/: Loader.py  Normalizer.py  Parser.py
Program Files/Reporting/: Report.py
Program Files/Timeline/: Builder.py
Program Files/Utilities/: text_utils.py  time_utils.py
Tests/: ImportTests.py
